# openvino

inference-engine/include/: ie_parallel.hpp
inference-engine/src/cldnn_engine/: cldnn_engine.cpp  cldnn_graph.cpp  cldnn_lstm.cpp  cldnn_program.cpp  cldnn_remote_context.cpp  cldnn_transformations_pipeline.cpp
inference-engine/tests/ie_test_utils/common_test_utils/: data_utils.hpp
inference-engine/tests/ie_test_utils/functional_test_utils/: layer_test_utils.hpp
samples/cpp/async_gpu_detection/: CMakeLists.txt  cmd_params.hpp  ie_wrapper.cpp  ie_wrapper.hpp  main.cpp
samples/cpp/benchmark_app/: CMakeLists.txt  inputs_filling.cpp  main.cpp  utils.cpp  utils.hpp
samples/cpp/hello_classification/: main.cpp
samples/cpp/object_detection_sample_ssd/: main.cpp
samples/cpp/speech_sample/: main.cpp
src/cmake/: ov_runtime.cmake
src/common/util/src/: file_util.cpp
src/core/src/: any.cpp  node.cpp
src/core/src/preprocess/: preprocess_steps_impl.cpp
src/core/tests/: any.cpp
src/inference/include/ie/: ie_parameter.hpp
src/inference/src/: any_copy.cpp  any_copy.hpp  ie_core.cpp  remote_tensor.cpp
src/inference/src/cpp/: ie_executable_network.cpp  ie_plugin.hpp  ie_remote_context.cpp  remote_tensor.cpp
src/inference/src/dev/: make_tensor.cpp
src/plugins/auto/: plugin.cpp
src/plugins/intel_cpu/src/: mkldnn_plugin.cpp
src/plugins/intel_gpu/: CMakeLists.txt
src/plugins/intel_gpu/tests_app/: CMakeLists.txt  gtest_main_gpu.cpp
src/plugins/proxy/src/: remote_tensor.hpp
src/plugins/template/src/: remote_context.cpp  (+1 more)
tools/compile_tool/: main.cpp
(+510 files in other folders)
